# todo-gtk-rs

./: Cargo.toml  README.md  build.rs
resources/: resources.gresource.xml
resources/ui/: shortcuts.ui  window.ui
schemas/: com.github.shahradelahi.Todo.gschema.xml
src/: config.rs  main.rs  utils.rs
src/widgets/: collection_object.rs  mod.rs  task_object.rs  window.rs
