[package]
name = "todo-gtk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
gio = "0.20.11"
glib = "0.20.10"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
gio = "0.20.11"
glib-build-tools = "0.20.0"
